# spassu_chatbot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 02db5ff543f4_initial_tables.py  604d2fc19d38_add_sample_table.py
app/: .env  main.py
app/agents/: prompts.py  response_generator.py  sql_generator.py
app/bot/: teams_bot.py
app/clients/db/: azure_sql_client.py  postgres_client.py
app/clients/llm/: azure_openai.py  copilot.py
app/core/: config.py
app/entities/api/v1/routes/: bot_routes.py  chatbot_routes.py
app/entities/models/: chat_messages.py  chat_sessions.py  prompts.py
app/entities/queries/: all.sql  best_sales_per_strore.sql  gross_sales_per_day.sql  gross_sales_product.sql  sales_comparison.sql  today_yesterday_comparison.sql  worst_sales_per_product.sql  worst_sales_per_store.sql
app/entities/repositories/: base_repository.py  chat_messages_repo.py  chat_sessions_repo.py  prompts_repo.py
app/entities/schema/: agent_response_schema.py  answer_schema.py  chat_messages_schema.py  chat_sessions_schema.py  prompts_schema.py
app/entities/services/: chat_messages_service.py  chat_sessions_service.py  conversations_service.py  prompts_service.py
app/monitoring/: logging.py
